Ajustado para ordenar em ordem descrescente os arquivos de backup atraves de um Comparator e Collections.sort